--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "voting-server",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "index.js",
-    "scripts": {
-        "start": "babel-node index.js",
-        "test": "mocha --compilers js:babel/register --require ./test/test_helper.js --recursive",
-        "test:watch": "npm run test -- --watch"
+  "scripts": {
+    "start": "babel-node index.js",
+    "test": "mocha --compilers js:babel/register --require ./test/test_helper.js --recursive",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "kordano",
   "license": "BSD-2-Clause",
   "dependencies": {
     "babel": "~5.8.23",
     "chai": "~3.3.0",
+    "immutable": "^3.7.5",
     "mocha": "~2.3.3",
     "redux": "^3.0.0",
     "socket.io": "^1.3.7"
@@ -20,7 +21,24 @@
     "test": "test"
   },
   "devDependencies": {
+    "chai-immutable": "^1.3.0",
+    "jsdom": "^3.1.2",
     "mocha": "^2.3.3"
   },
-  "description": ""
+  "description": "Lunch voting server",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lambda-kollektiv/voting-server.git"
+  },
+  "keywords": [
+    "recommender",
+    "system",
+    "javascript",
+    "react",
+    "redux",
+    "immutable"
+  ],
+  "bugs": {
+    "url": "https://github.com/lambda-kollektiv/voting-server/issues"
+  }
 }
