--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test": "test"
   },
   "devDependencies": {
+    "chai": "^3.3.0",
     "chai-immutable": "^1.3.0",
-    "jsdom": "^3.1.2",
     "mocha": "^2.3.3"
   },
   "description": "Lunch voting server",
